# itseez-ss-2016-practice

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  summer_school_2016.sln
docs/: README_1.md  README_2.md  README_3.md  README_4.md
haar_cascade/: lizard_cascade.xml  logo_cascade.xml
include/: ImageProcessorImpl.hpp  benchmark.hpp  detection.hpp  image_processing.cpp  image_processing.hpp  roi.hpp  tracking.hpp  workaround.hpp
lib/Debug/: summer_school_2016_lib.lib
logo/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml
logo_cascade/: cascade.xml  intel_HAAR.xml  intel_LBP.xml
logo_cascade2/: intel_lbp.xml
samples/: .~lock.template_demo_max_Monday.cpp#  CMakeLists.txt  Image_demo.cpp  Makefile  cmake_install.cmake  convexhull_demo.cpp  day_2_project.cpp  detection_demo.cpp  devtools_demo.cpp  devtools_demo.vcxproj  devtools_demo.vcxproj.filters  image_proc.cpp  imageproc_demo.cpp  imageproc_demo.vcxproj  imageproc_demo.vcxproj.filters  imgproc_demo.cpp  imgprog_demo.cpp  improc_demo.cpp  template_demo.cpp  template_demo.vcxproj  template_demo.vcxproj.filters  template_demo_max_Monday.cpp  template_demo_max_Monday.cpp~  template_demo_max_Thursday.cpp  template_demo_max_Thursday.cpp~  template_demo_max_Wednesday.cpp  template_demo_max_Wednesday_video.cpp  tracking_demo.cpp  video_proc.cpp  videocamproc_demo.cpp  videoproc_demo.cpp
samples/devtools_demo.dir/Debug/devtools_demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  devtools_demo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
samples/template_demo.dir/Debug/: template_demo.vcxprojResolveAssemblyReference.cache
samples/template_demo.dir/Debug/template_demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: CMakeLists.txt  First_method.cpp  Forth_method.cpp  ImageProcessorImpl.cpp  Makefile  Second_method.cpp  Third_method.cpp  benchmark.cpp  cmake_install.cmake  detection.cpp  image_processing.cpp  roi.cpp  summer_school_2016_lib.vcxproj  summer_school_2016_lib.vcxproj.filters  tracking.cpp  workaround.cpp
src/summer_school_2016_lib.dir/Debug/summer_s.28B38CCF.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
test/: CMakeLists.txt  Makefile  Source.cpp  cmake_install.cmake  test_dummy.cpp  test_picture.cpp  test_summer_school_2016.vcxproj  test_summer_school_2016.vcxproj.filters  test_threshold.cpp  test_workaround.cpp
test/test_data/detection/cascades/: opencv_logo_cascade.xml  unn_old_logo_cascade.xml
test/test_data/video/: pedestrians_gt.yml
test/test_summer_school_2016.dir/Debug/: test_summer_school_2016.vcxprojResolveAssemblyReference.cache
test/test_summer_school_2016.dir/Debug/test_sum.97ACB81D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
training_logo/: cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml
x64/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  (+2 more)
(+3 files in other folders)
